--- a/context/brand-context/default/scss/60-utilities/typography.scss
+++ b/context/brand-context/default/scss/60-utilities/typography.scss
@@ -26,6 +26,14 @@
 	text-align: center;
 }
 
+.u-text-normal {
+	font-weight: $font-weight-normal;
+}
+
+.u-text-bold {
+	font-weight: $font-weight-bold;
+}
+
 .u-double-underline {
 	@include u-double-underline;
 }
