make expander full width at narrow viewport

--- a/toolkits/nature/packages/nature-header/scss/50-components/header.scss
+++ b/toolkits/nature/packages/nature-header/scss/50-components/header.scss
@@ -137,7 +137,9 @@
 }
 
 .c-header__item--dropdown-menu {
-	position: relative;
+	@include media-query('sm') {
+		position: relative;
+	}
 
 	.c-header__link.is-open {
 		svg {
