--- a/toolkits/nature/packages/nature-header/scss/50-components/header-expander.scss
+++ b/toolkits/nature/packages/nature-header/scss/50-components/header-expander.scss
@@ -75,13 +75,21 @@
 .c-header-expander.has-tethered {
 	position: absolute;
 	top: 100%; // bottom of the tether element
-	transform: translateY(8px);
+	transform: translateY(5px);
 	z-index: 1;
 	left: 0;
-	width: auto;
-	min-width: 225px;
+	width: 100%;
 	border-radius: 0 0 2px 2px;
 	border-bottom: 0;
+
+	@include media-query('sm') {
+		transform: translateY(8px);
+		width: auto;
+	}
+
+	@include media-query('md') {
+		min-width: 225px;
+	}
 
 	.c-header-expander__list {
 		display: block;
