--- a/toolkits/nature/packages/nature-header/scss/50-components/header.scss
+++ b/toolkits/nature/packages/nature-header/scss/50-components/header.scss
@@ -69,6 +69,18 @@
 	}
 }
 
+.c-header__menu--journal {
+	font-size: 1.4rem;
+
+	@include media-query('sm') {
+		flex-wrap: nowrap;
+	}
+
+	@include media-query('sm') {
+		font-size: 1.6rem;
+	}
+}
+
 .c-header__menu--tools {
 	@include media-query('lg', 'max') {
 		display: none;
@@ -109,8 +121,12 @@
 	white-space: nowrap;
 
 	> svg {
-		margin-left: spacing(4);
+		margin-left: spacing(2);
 		transition-duration: 0.2s;
+
+		@include media-query('sm') {
+			margin-left: spacing(4);
+		}
 	}
 }
 
