Switches to use the u-h3

--- a/toolkits/global/packages/global-card/scss/50-components/card.scss
+++ b/toolkits/global/packages/global-card/scss/50-components/card.scss
@@ -32,8 +32,7 @@
 }
 
 .c-card__title {
-	font-size: $card--title-font-size;
-	font-weight: $card--title-font-weight;
+	@include u-h3;
 	margin-bottom: $card--spacing;
 }
 
