Move springer-lists component to global
 - Add springernature theme
 - Rename mixin `interface-link` to `u-link-interface`
 - Move the above to global brand-context

--- a/context/brand-context/default/scss/30-mixins/links.scss
+++ b/context/brand-context/default/scss/30-mixins/links.scss
@@ -31,3 +31,15 @@
 		right: 0;
 	}
 }
+
+@mixin u-link-interface {
+	text-decoration: none;
+
+	&.active,
+	&:active,
+	&.hover,
+	&:hover {
+		text-decoration: underline;
+		text-decoration-skip-ink: auto;
+	}
+}
