--- a/toolkits/global/packages/global-lists/scss/10-settings/_springernature.scss
+++ b/toolkits/global/packages/global-lists/scss/10-settings/_springernature.scss
@@ -1,3 +1,12 @@
+/**
+ * List
+ * Springer branding for component
+ */
+
+// Default list setting
+@import 'default';
+
+// Springer Nature overrides
 $global-list-description--line-height: 1.5;
 $global-list-description--wrapper-margin-bottom: spacing(16);
 $global-list-description--margin-bottom: 0;
