[AK,MC] global-list: use interface-link for springer brand only

--- a/toolkits/global/packages/global-lists/scss/10-settings/_default.scss
+++ b/toolkits/global/packages/global-lists/scss/10-settings/_default.scss
@@ -6,7 +6,7 @@ $global-list-description--font-weight: $font-weight-bold;
 $global-list-description--font-size: $font-size-sm;
 $global-list-description--line-height: 1.4;
 $global-list-description--margin-bottom: 0.25em;
-$global-list-description--is-interface-link: true;
+$global-list-description--is-interface-link: false;
 
 $global-list-group--border-color: #ccc;
 $global-list-group--padding-xs: 4px 0;
