--- a/toolkits/global/packages/global-lists/scss/10-settings/_springer.scss
+++ b/toolkits/global/packages/global-lists/scss/10-settings/_springer.scss
@@ -7,4 +7,5 @@
 @import 'default';
 
 // Springer overrides
+$global-list-description--is-interface-link: true;
 $global-list-group--is-interface-link: true;
