--- a/toolkits/global/packages/global-lists/scss/50-components/_list-description.scss
+++ b/toolkits/global/packages/global-lists/scss/50-components/_list-description.scss
@@ -1,11 +1,16 @@
 .c-list-description {
-	font-size: $global-list-description--font-size;
-	font-family: $font-family-sans;
-	line-height: $global-list-description--line-height;
 	margin-bottom: 0;
 	width: 100%; // fix text breaking layout in IE10
 
-	@if $global-list-description--is-interface-link {
+	@if not $global-list-description--is-interface {
+		font-size: $global-list-description--font-size;
+		font-family: $font-family-sans;
+		line-height: $global-list-description--line-height;
+	}
+
+	@if $global-list-description--is-interface {
+		@include u-text-interface;
+
 		a {
 			@include interface-link;
 		}
