--- a/context/brand-context/nature/scss/40-base/tables.scss
+++ b/context/brand-context/nature/scss/40-base/tables.scss
@@ -9,7 +9,7 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 	font-size: 1.6rem;
-	font-family: $font-family-sans;
+	font-family: $context--font-family-sans;
 }
 
 th,
