--- a/context/brand-context/springer/scss/60-utilities/typography.scss
+++ b/context/brand-context/springer/scss/60-utilities/typography.scss
@@ -15,11 +15,11 @@
 }
 
 .u-text-sans-serif {
-	font-family: $font-family-sans;
+	font-family: $context--font-family-sans;
 }
 
 .u-text-serif {
-	font-family: $font-family-serif;
+	font-family: $context--font-family-serif;
 }
 
 .u-text-font-smoothing {
