--- a/context/brand-context/springernature/scss/10-settings/breakpoints.scss
+++ b/context/brand-context/springernature/scss/10-settings/breakpoints.scss
@@ -3,7 +3,7 @@
  * Shared media query values
  */
 
-$breakpoints: (
+$context--breakpoints: (
 	'handheld': 420px,
 	'tablet-vertical': 768px,
 	'tablet': 1024px,
