--- a/context/brand-context/springernature/scss/10-settings/typography.scss
+++ b/context/brand-context/springernature/scss/10-settings/typography.scss
@@ -3,8 +3,8 @@
  * Font settings
  */
 
-$font-family-serif: 'Merriweather', serif;
-$font-family-sans: 'Daytona', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$context--font-family-serif: 'Merriweather', serif;
+$context--font-family-sans: 'Daytona', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
 
 /**
