--- a/context/brand-context/springernature/scss/40-base/basic.scss
+++ b/context/brand-context/springernature/scss/40-base/basic.scss
@@ -6,7 +6,7 @@
 body {
 	font-size: 13px;
 	line-height: 1.5;
-	font-family: $font-family-serif;
+	font-family: $context--font-family-serif;
 }
 
 a {
