--- a/context/brand-context/springernature/scss/40-base/layout.scss
+++ b/context/brand-context/springernature/scss/40-base/layout.scss
@@ -11,7 +11,7 @@ html {
 
 body {
 	min-height: 100%;
-	font-family: $font-family-serif;
+	font-family: $context--font-family-serif;
 	line-height: 1.76;
 	color: color('mineshaft');
 	background: color('alabaster');
