--- a/context/brand-context/default/scss/10-settings/buttons.scss
+++ b/context/brand-context/default/scss/10-settings/buttons.scss
@@ -8,66 +8,66 @@
 @import '../20-functions/colors';
 @import '../20-functions/spacing';
 
-$button--border-width-style: 1px solid;
-$button--line-height: 1.3;
-$button--font-family: sans-serif;
-$button--font-size-small: 1.4rem;
-$button--font-size-normal: 1.6rem;
-$button--font-size-large: 1.8rem;
-$button--icon-margin: spacing(8);
-$button--padding: spacing(8);
-$button--padding-large: spacing(16);
-$button--justify-content: center;
-$button--transition: 0.25s ease, color 0.25s ease, border-color 0.25s ease;
-$button--border-radius: 2px;
-$button--letter-spacing: null;
+$context--button-border-width-style: 1px solid;
+$context--button-line-height: 1.3;
+$context--button-font-family: sans-serif;
+$context--button-font-size-small: 1.4rem;
+$context--button-font-size-normal: 1.6rem;
+$context--button-font-size-large: 1.8rem;
+$context--button-icon-margin: spacing(8);
+$context--button-padding: spacing(8);
+$context--button-padding-large: spacing(16);
+$context--button-justify-content: center;
+$context--button-transition: 0.25s ease, color 0.25s ease, border-color 0.25s ease;
+$context--button-border-radius: 2px;
+$context--button-letter-spacing: null;
 
 // Button Themes
 // Variables to set themes styles
 
-$button--default: (
+$context--button-default: (
 	'color': darkblue,
 	'backgroundColor': greyscale(95),
 	'backgroundImage': none,
-	'border': $button--border-width-style greyscale(80),
+	'border': $context--button-border-width-style greyscale(80),
 	'visitedColor': darkblue,
 	'hoverColor': white,
-	'hoverBorder': $button--border-width-style greyscale(40),
+	'hoverBorder': $context--button-border-width-style greyscale(40),
 	'hoverBackgroundColor': greyscale(40),
 	'hoverBackgroundImage': none,
 	'hoverTextDecoration': none,
-	'focusBorder': $button--border-width-style greyscale(40),
+	'focusBorder': $context--button-border-width-style greyscale(40),
 	'focusTextDecoration': none,
 	'fontWeight': normal,
 );
 
-$button--primary: (
+$context--button-primary: (
 	'color': white,
 	'backgroundColor': darkblue,
 	'backgroundImage': none,
-	'border': $button--border-width-style blue,
+	'border': $context--button-border-width-style blue,
 	'visitedColor': white,
 	'hoverColor': white,
-	'hoverBorder': $button--border-width-style blue,
+	'hoverBorder': $context--button-border-width-style blue,
 	'hoverBackgroundColor': blue,
 	'hoverBackgroundImage': none,
-	'focusBorder': $button--border-width-style blue,
+	'focusBorder': $context--button-border-width-style blue,
 	'fontWeight': normal,
 );
 
-$button--disabled: (
+$context--button-disabled: (
 	'color': greyscale(),
 	'backgroundColor': transparent,
 	'backgroundImage': none,
-	'border': $button--border-width-style greyscale(80),
+	'border': $context--button-border-width-style greyscale(80),
 	'visitedColor': greyscale(),
 	'opacity': 0.7,
 	'hoverColor': greyscale(),
-	'hoverBorder': $button--border-width-style greyscale(80),
+	'hoverBorder': $context--button-border-width-style greyscale(80),
 	'hoverBackgroundColor': transparent,
 	'hoverBackgroundImage': none,
 	'hoverTextDecoration': none,
-	'focusBorder': $button--border-width-style greyscale(80),
+	'focusBorder': $context--button-border-width-style greyscale(80),
 	'focusTextDecoration': none,
 	'fontWeight': normal,
 );
