--- a/context/brand-context/default/scss/20-functions/layers.scss
+++ b/context/brand-context/default/scss/20-functions/layers.scss
@@ -1,10 +1,10 @@
-@function z($layer-name, $layer-variant: null, $map: $z-layers) {
+@function z($layer-name, $layer-variant: null, $map: $context--z-layers) {
 	@if not map-has-key($map, $layer) {
-		@warn "No z-index found in $z-layers map for `#{$layer}`. Property omitted.";
+		@warn "No z-index found in $context--z-layers map for `#{$layer}`. Property omitted.";
 	}
 	@if ($layer-variant != null) {
 		@return map-get(map-get($map, $layer-name), $layer-variant);
-	} 
+	}
 	@else {
 		@return map-get($map, $layer-name);
 	}
