--- a/context/brand-context/nature/scss/10-settings/typography.scss
+++ b/context/brand-context/nature/scss/10-settings/typography.scss
@@ -5,9 +5,9 @@
 
 $is-nature-branded: false !default;
 $save-data: false !default;
-$font-family-serif: if($is-nature-branded, (if($save-data, (Palatino, serif), (Harding, Palatino, serif))), $font-family-serif);
-$font-family-primary: if($is-nature-branded, $font-family-serif, $font-family-sans);
-$font-family-secondary: $font-family-sans;
+$context--font-family-serif: if($is-nature-branded, (if($save-data, (Palatino, serif), (Harding, Palatino, serif))), $context--font-family-serif);
+$context--font-family-primary: if($is-nature-branded, $context--font-family-serif, $context--font-family-sans);
+$font-family-secondary: $context--font-family-sans;
 
 $font-size-xxs: 12px;
 $font-size-xs: 14px;
@@ -17,13 +17,13 @@ $font-size-lg: 24px;
 $font-size-xl: 28px;
 $font-size-xxl: 32px;
 
-$font-size-h1: 3.2rem;
-$font-size-h2: 2.4rem;
-$font-size-h3: 2rem;
-$font-size-h4: 1.8rem;
+$context--font-size-h1: 3.2rem;
+$context--font-size-h2: 2.4rem;
+$context--font-size-h3: 2rem;
+$context--font-size-h4: 1.8rem;
 
-$font-weight-normal: 400;
-$font-weight-bold: 700;
-$font-weight-heading: $font-weight-bold;
+$context--font-weight-normal: 400;
+$context--font-weight-bold: 700;
+$context--font-weight-heading: $context--font-weight-bold;
 
-$line-height-heading: 1.3;
+$context--line-height-heading: $context--line-height-tight;
