--- a/context/brand-context/nature/scss/30-mixins/typography.scss
+++ b/context/brand-context/nature/scss/30-mixins/typography.scss
@@ -6,8 +6,8 @@
 // Headings
 
 @mixin _heading-base() {
-	font-weight: $font-weight-heading;
-	line-height: $line-height-heading;
+	font-weight: $context--font-weight-heading;
+	line-height: $context--line-height-heading;
 	@if $is-nature-branded {
 		@include u-font-smoothing();
 	}
@@ -15,28 +15,28 @@
 
 @mixin u-h1() {
 	@include _heading-base();
-	font-size: $font-size-h1;
+	font-size: $context--font-size-h1;
 	margin-bottom: spacing(24);
-	font-family: $font-family-primary;
+	font-family: $context--font-family-primary;
 }
 
 @mixin u-h2() {
 	@include _heading-base();
-	font-size: $font-size-h2;
+	font-size: $context--font-size-h2;
 	margin-bottom: spacing(8);
-	font-family: $font-family-primary;
+	font-family: $context--font-family-primary;
 }
 
 @mixin u-h3() {
 	@include _heading-base();
-	font-size: $font-size-h3;
+	font-size: $context--font-size-h3;
 	margin-bottom: spacing(8);
-	font-family: $font-family-primary;
+	font-family: $context--font-family-primary;
 }
 
 @mixin u-h4() {
 	@include _heading-base();
-	font-size: $font-size-h4;
+	font-size: $context--font-size-h4;
 	margin-bottom: spacing(8);
 	font-family: $font-family-secondary;
 }
