--- a/context/brand-context/springer/scss/60-utilities/separator.scss
+++ b/context/brand-context/springer/scss/60-utilities/separator.scss
@@ -1,6 +1,6 @@
 .u-separator {
 	height: 1px;
-	background-color: greyscale($greyscale-min, 0.3);
+	background-color: greyscale($context--greyscale-min, 0.3);
 	border: none;
 	margin-top: 0;
 	margin-bottom: 16px;
