--- a/context/brand-context/default/scss/10-settings/typography.scss
+++ b/context/brand-context/default/scss/10-settings/typography.scss
@@ -10,14 +10,14 @@ $context--font-family-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Robot
 $context--font-weight-normal: 400;
 $context--font-weight-bold: 700;
 
-$line-height-base: 1.61803398875; // golden ratio
-$line-height-tight: 1.4;
+$context--line-height-base: 1.61803398875; // golden ratio
+$context--line-height-tight: 1.4;
 
 // Define your base size in EMs
 // http://stackoverflow.com/questions/20099844/chrome-not-respecting-rem-font-size-on-body-tag
 $context--font-size-base: 1.8em;
 
-$font-size-interface: 16px;
+$context--font-size-interface: 16px;
 
 // Headings
 $context--font-size-h1: 3.2rem;
