Updates ad to latest context

--- a/toolkits/global/packages/global-ad/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-ad/scss/10-settings/default.scss
@@ -4,7 +4,7 @@
  *
  */
 
-$ad--font-family: $font-family-sans;
+$ad--font-family: $context--font-family-sans;
 $ad--font-size: 1.4rem;
 $ad--font-weight: normal;
 $ad--label-margin-bottom: spacing(4);
